--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,7 +35,8 @@
         "tuple": "cpp",
         "type_traits": "cpp",
         "typeinfo": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "algorithm": "cpp"
     },
     "git.ignoreLimitWarning": true
 }
